<resources>
    <string name="app_name">recipeapp</string>
    <string name="title_activity_signup">SignupActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="entry_main_msg">Welcome to RecipeReel!</string>
    <string name="entry_sub_msg">Login or Signup</string>

    <string name="profile_options_logout">Logout</string>
    <string name="profile_options_edit">Edit Profile</string>
    <string name="profile_options_delete">Delete Profile</string>
    <string name="profile_options_create">Create Recipe</string>
    <string name="profile_options_myChats">My Chats</string>
    <string name="profile_options_helperchat">Chat with Helper</string>
    <string name="profile_options_follow">Follow Account</string>
    <string name="profile_options_chat">Chat</string>
    <string name="profile_guest_text">"You\'re not signed in!"</string>

    <string name="invalid_password_msg">Password must be 8+ characters &amp; contain a number or special character</string>
    <string name="mismatch_password_msg">Passwords don\'t match!</string>

    <string name="PREF_KEY">shared_prefs</string>
    <string name="USERID_KEY">userid_key</string>
    <string name="PHOTOID_KEY">photoid_key</string>
    <string name="USERNAME_KEY">username_key</string>
    <string name="EMAIL_KEY">email_key</string>
    <string name="PASSWORD_KEY">password_key</string>
    <string name="RECIPES_KEY">recipes_key</string>
    <string name="SAVED_RECIPES_KEY">saved_recipes_key</string>
    <string name="CURRENT_PHOTOID_KEY">current_photoID_key</string>
    <string name="CURRENT_PHOTOID_BOOLEAN_KEY">current_photoID_boolean_key</string>

</resources>