<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.SignupActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="80dp"
        android:text="Signup"
        android:textSize="40dp"></TextView>

<!--    USERNAME    -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="username: "
            android:textSize="20dp"></TextView>

        <EditText
            android:id="@+id/signup_username_edt"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:hint="Enter Username Here"
            android:textColorHint="@color/light_gray"
            android:inputType="text"
            android:maxLines="1"></EditText>
    </LinearLayout>

<!--    EMAIL   -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="email: "
            android:textSize="20dp"></TextView>

        <EditText
            android:id="@+id/signup_email_edt"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="Enter Email Here"
            android:textColorHint="@color/light_gray"
            android:inputType="text"
            android:maxLines="1"></EditText>
    </LinearLayout>

<!--    PASSWORD    -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="password: "
            android:textSize="20dp"></TextView>

        <EditText
            android:id="@+id/signup_password_edt"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:hint="Enter Password Here"
            android:textColorHint="@color/light_gray"
            android:inputType="textPassword"></EditText>
    </LinearLayout>

<!--    CONFIRM PASSWORD    -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="70sp"
            android:text="confirm\npassword: "
            android:textSize="20dp"></TextView>

        <EditText
            android:id="@+id/signup_confirm_edt"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:hint="Enter Password Here"
            android:textColorHint="@color/light_gray"
            android:inputType="textPassword"></EditText>

    </LinearLayout>

    <TextView
        android:id="@+id/signup_error_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:text="password error"
        android:textColor="@color/red"
        android:textSize="20dp"></TextView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/signup_signup_btn"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="Signup"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:translationX="-10dp"
            app:iconPadding="0dp"></Button>

        <Button
            android:id="@+id/signup_entry_btn"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="Back to Entry"
            android:textColor="#ffffff"
            android:textSize="20sp"></Button>

    </LinearLayout>


</androidx.appcompat.widget.LinearLayoutCompat>
