<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    tools:context=".activities.EntryActivity">

    <TextView
        android:id="@+id/entry_msg_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="120dp"
        android:layout_marginBottom="50dp"
        android:text="Welcome to RecipeReel!"
        android:textColor="#673AB7"
        android:textSize="35dp"></TextView>

    <TextView
        android:id="@+id/entry_sub_msg_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:layout_gravity="center"
        android:text="Login or Signup"
        android:textAlignment="center"
        android:textColor="#673AB7"
        android:textSize="20dp"
        android:translationY="-30dp" />

    <Button
        android:id="@+id/entry_login_btn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"
        android:text="Login"
        android:textColor="#ffffff"
        android:textSize="20sp"></Button>

    <Button
        android:id="@+id/entry_signup_btn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Signup"
        android:textColor="#ffffff"
        android:textSize="20sp"></Button>

    <Button
        android:id="@+id/entry_guest_btn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Continue as Guest"
        android:textSize="20dp" />


</androidx.appcompat.widget.LinearLayoutCompat>

    <!--<?xml version="1.0" encoding="utf-8"?>-->
    <!--<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
    <!--    xmlns:tools="http://schemas.android.com/tools"-->
    <!--    android:layout_width="match_parent"-->
    <!--    android:layout_height="match_parent"-->
    <!--    tools:context=".EntryActivity">-->

    <!--</androidx.constraintlayout.widget.ConstraintLayout>-->
