...
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:text="Cancel"
                    android:textSize="30dp" />

                <Button
                    android:id="@+id/editprofile_popup_confirm_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:text="Confirm"
                    android:textSize="30dp" />
...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="username: "
            android:textSize="20dp"></TextView>

        <EditText
            android:id="@+id/editprofile_username_edt"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:hint="Current Username"
            android:textColorHint="@color/light_gray"
            android:inputType="text"
            android:maxLines="1"></EditText>
...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="email: "
            android:textSize="20dp"></TextView>

        <EditText
            android:id="@+id/editprofile_email_edt"
            android:layout_width="wrap_content"
            android:textColorHint="@color/light_gray"
            android:layout_height="50dp"
            android:hint="Current Email"
            android:inputType="text"
            android:maxLines="1"></EditText>
...
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="Upload Profile Picture"
            android:textSize="20sp"></Button>
        <Button
            android:id="@+id/editprofile_save_btn"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="Save Changes"
            android:textSize="20sp"></Button>

...
            android:id="@+id/editprofile_exit_btn"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="Exit Without Saving"
            android:textSize="20sp"></Button>
        <Button
            android:id="@+id/editprofile_delete_btn"
            android:layout_width="200dp"
            android:backgroundTint="#FF0000"
            android:layout_height="wrap_content"
            android:text="Delete Account"
            android:textSize="20sp"></Button>

...
